--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7889f4">  <td>22/08/25 14:13:50</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;ApiBaseClass.closeAPIConnections()[pri:0, instance:org.tyss.dream11.TestCase_002@7fd50002]">&lt;&lt;closeAPIConnections</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766869737</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>22/08/25 14:13:50</td>   <td>92</td> <td title="&lt;&lt;ApiBaseClass.closeCon()[pri:0, instance:org.tyss.dream11.TestCase_002@7fd50002]">&lt;&lt;closeCon</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766869737</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>22/08/25 14:12:49</td>   <td>-61128</td> <td title="&gt;&gt;ApiBaseClass.connectionSetup()[pri:0, instance:org.tyss.dream11.TestCase_002@7fd50002]">&gt;&gt;connectionSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766869737</td>   <td></td> </tr>
-<tr bgcolor="92a28a">  <td>22/08/25 14:13:50</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase_002.goMartEndToEndTest()[pri:0, instance:org.tyss.dream11.TestCase_002@7fd50002]">goMartEndToEndTest</td> 
-  <td>main@1766869737</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>22/08/25 14:12:54</td>   <td>-55848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ApiBaseClass.openApp()[pri:0, instance:org.tyss.dream11.TestCase_002@7fd50002]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@1766869737</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>22/08/25 14:12:49</td>   <td>-61122</td> <td>&nbsp;</td><td title="&gt;&gt;ApiBaseClass.parameterization()[pri:0, instance:org.tyss.dream11.TestCase_002@7fd50002]">&gt;&gt;parameterization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766869737</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>22/08/25 14:12:49</td>   <td>-61110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ApiBaseClass.startServer()[pri:0, instance:org.tyss.dream11.TestCase_002@7fd50002]">&gt;&gt;startServer</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766869737</td>   <td></td> </tr>
+<tr bgcolor="b3fda1">  <td>22/08/29 17:19:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToasterMessageTest.appInBackGroundTest()[pri:0, instance:org.tyss.appium36.practice.ToasterMessageTest@24fcf36f]">appInBackGroundTest</td> 
+  <td>main@510276116</td>   <td></td> </tr>
 </table>
